examples/bad/mut_assign.mko
fn main() {
    let mut n: int = 1
    n = "x"
}
